# gw

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  git.rs  main.rs  meta.rs
src/cmd/: exec.rs  mod.rs
